--- a/portfolio.html
+++ b/portfolio.html
@@ -356,10 +356,10 @@ position: relative;
 
 <img src="https://i.imgur.com/NC62NZP.gif">
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> compositions<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/s91czy.mp3" target="_blank" id="linkzinhoinho">angelolatry .mp3</a><br>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/15tyof.mp3" target="_blank" id="linkzinhoinho">tiptoes .mp3</a><br>
 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/i06o5b.mp3" target="_blank" id="linkzinhoinho">forbidden .mp3</a><br>
 <sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/43xa8t.mp3" target="_blank" id="linkzinhoinho">little girl .mp3</a><br>
-<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/xxc193.mp3" target="_blank" id="linkzinhoinho">will-o'-the-wisp .mp3</a>
+<sub><sub><img width="15px" height="auto" src="https://i.imgur.com/jvuHXjn.gif"></sub></sub>　<a href="https://files.catbox.moe/f7m6p1.mp3" target="_blank" id="linkzinhoinho">old stuffie .mp3</a>
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -378,7 +378,7 @@ position: relative;
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> graphic design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> web design<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br></font><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/SNklLdZ.png"><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/nJXE1Ek.png"><br><br>
 <img width="200px" height="auto" src="https://i.imgur.com/jfEMOrb.png"><br><br>
@@ -391,6 +391,13 @@ position: relative;
 <br>
 <img src="https://i.imgur.com/KH3Qcj9.gif"> <img src="https://i.imgur.com/BafUAvl.gif"><br><br><img src="https://i.imgur.com/r6PF4ve.gif"><br><br><img src="https://i.imgur.com/kjJ7zti.gif"> <img src="https://i.imgur.com/hxS2jLj.gif"><br><br>
 <img src="https://i.imgur.com/bvAiMrD.gif"> <img src="https://i.imgur.com/7mKu6kW.png">
+<br><br><br><br>
+<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
+<center>
+
+<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> collage<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
+<br>
+<img width="250px" height="auto" src="https://i.imgur.com/VZmuGK3.png">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -461,8 +468,8 @@ position: relative;
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> photography<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <br>
-<img width="98px" height="98px" src="https://i.imgur.com/6xwrbIg.png">　<img width="98px" height="98px" src="https://i.imgur.com/ZQD6Ylb.png">
-<br><br><img width="98px" height="98px" src="https://i.imgur.com/TffxEA2.png">　<img width="98px" height="98px" src="https://i.imgur.com/3RFOGXl.png">
+<img width="98px" height="98px" src="https://i.imgur.com/wH6uA8n.jpg">　<img width="98px" height="98px" src="https://i.imgur.com/FfbpbN1.png">
+<br><br><img width="98px" height="98px" src="https://i.imgur.com/lVueesw.jpg">　<img width="98px" height="98px" src="https://i.imgur.com/CpIBdRW.jpg">
 <br><br><br><br>
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
@@ -474,12 +481,6 @@ position: relative;
 <img src="https://i.imgur.com/NC62NZP.gif"></center></font>
 <center>
 
-<br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> needle felt<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
-<br>
-<img width="auto" height="150px" src="https://i.imgur.com/yObdrBa.png"><br><br><img width="auto" height="150px" src="https://i.imgur.com/vG6plcS.png">　<img width="auto" height="150px" src="https://i.imgur.com/bgqferW.png">
-<br><br><br><br>
-<img src="https://i.imgur.com/NC62NZP.gif"></center></font>
-<center>
 
 <br><br><br><font color="#9e8976"><sub><sub><img src="https://i.imgur.com/nxTBxAO.gif"></sub></sub> random poetry and texts<sub><img src="https://i.imgur.com/0USgjYr.gif"></sub><br><br>
 <sub><sub><img width="17px" height="auto" src="https://i.imgur.com/seoaxlC.gif"></sub></sub>
