--- a/faq.html
+++ b/faq.html
@@ -679,6 +679,10 @@ i want to take some pictures of my looks, clothes that i wear, but selfies, stil
 so i'm still going to take selfies with pajamas, and sometimes the same ones, yep, the same hair too, and no makeup, because at least for now i feel good this way ! it's my way of feeling comfortable enough to take pictures from time to time ; ;<br>
 <br>
 i hope you understand !!
+<br><br>
+<b>edit //</b> i got a good camera, but what i said above doesn't change :<br>
+i still don't think i'll post selfies often, and i'll keep taking pictures with pajamas and nightgowns, because it's how i usually feel comfortable.<br>
+and i probably will not stop posting some pics anonymously out there.. i'm very shy, sorry ///
 <br><br><br><br><br><br>
 </font>
 
