--- a/archive.html
+++ b/archive.html
@@ -351,6 +351,221 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/4Id7F0K.png"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>july . 27 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/UCqlohf.gif"/><br>
+i've been feeling so in love these days ♡ !!!<br>
+whenever i am i send endless messages of love and appreciation to everyone i admire, in addition to writing lots of poems and love letters to bubu ( my favorite person in the whole world, of course he deserves it )<br>
+and in return i always get very heartwaming messages that make me blush <img src="https://i.imgur.com/0yHKPnX.gif"/><br>
+if you feel like spreading love, always do it !<br>
+don't keep compliments just for yourself, let who you love know how much you love them<br>
+( if you're shy, do it anonymously, but always do it )<br>
+<br>
+so today i'm going to post here updates of the last two projects, because yes, i updated them all !<br>
+and i intend to continue updating from time to time, but i will give myself some time to rest because i really worked hard doing all this <img src="https://i.imgur.com/aTV14Rn.gif"/><br>
+for the soft collection i did a little "study" with a drawing of <i>umibenobochi</i>.<br>
+the soft girl featured this time is 142 ♡<br>
+i painted with pastels and added different types of paper and also a satin ribbon :<br>
+<br><br>
+
+<center><img width="350px" height="auto" src="https://i.imgur.com/TjFIObk.png"/></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1492&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+i really liked the result, this simple style gives enough freedom to play with different elements !<br>
+it's a pity that my camera is so bad, it doesn't look so cute in the picture <img src="https://i.imgur.com/59FmGeU.gif"/><br>
+i want to get a better camera soon ///<br>
+<br>
+the next thing will be a remix for moep. i have two, but i chose my fav one to post here, since i have posted too many songs lately ( do you like it ? )<br>
+so here you have <i>lucky vacuum</i> and loooots of love ♡ ♡ ♡ !!<br>
+<br><br>
+
+<center><a href="https://files.catbox.moe/lskn1r.mp3" id="linkbjinho" target="_blank">my ❤１００％ for u .mp3</a></center>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/7zvWsMq.gif"/>&nbsp;&nbsp; { &nbsp;1512&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/5w5TqhO.gif"/>&nbsp;&nbsp; { &nbsp;0&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+please don't forget to give me some feedback !<br>
+( i would like to make it clear that the voices i used in these remix are not mine )<br>
+<br>
+aaand i have here a speedpaint !!<br>
+i have not been recording for a long time, i really enjoyed it and i want to record others in the future.<br>
+<br><br>
+<center><video width="350" height="auto" controls>
+<source src="https://files.catbox.moe/tkhpl5.webm" type="video/webm">
+</video></center>
+<br><br>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/UKhQauT.gif"/>&nbsp;&nbsp; { &nbsp;1524&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/EL39DaW.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+( the music i used : orisinal * a cupids day )<br>
+this is a repaint of a sketch that i like very much and i'm happy to see the improvements in my repaintings !<br>
+do you also think i've got better ?<br>
+<br>
+um, today i also want to tell you that i have a new id ///<br>
+i fell in love with her at first sight and i identified with everything about her ; ;<br>
+when i researched a little more i discovered that !!!!!! her birthday is on the SAME DAY as mine<br>
+it really made me understand that she just should be on the list !<br>
+<br>
+
+　　　　　　　　♡ <a id="linkbjinho" data-target="spoiler4id" class="btn-spoiler4id">kokona</a><br>
+
+<div id="spoiler4id" class="spoiler-area4id is-closed4id">
+<!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<br>
+<center><img width="250" height="auto" src="https://i.imgur.com/ZFKJch8.png"/></center><br><br>
+<center><img width="250" height="auto" src="https://i.imgur.com/Ft6fDXx.jpg"/></center><br><br>
+<center><img width="250" height="auto" src="https://i.imgur.com/nURFajC.png"/></center>
+<br><br>
+</div><!-- SPOILER AREAAAAAAAAAAAAAAAAAAAAA -->
+<style>
+p { margin: 0; }
+.spoiler-area4id {
+
+}
+.spoiler-area4id.is-closed4id { height: 0; overflow: hidden; padding: 10px 0 0; }
+</style>
+<script>
+(function(){
+    "use strict";
+    var $btns = document.querySelectorAll('.btn-spoiler4id');
+    function loop($els, cb) {
+        var i = $els.length;
+        while(i--) {
+            cb($els[i]);
+        }
+    }
+    loop($btns, function($btn){
+        $btn.addEventListener("click", function(){
+            var $spoiler = document.getElementById(this.getAttribute("data-target"));
+            if( this.innerHTML === "kokona" ){
+                this.innerHTML = "kokona ˣ";
+                $spoiler.classList.remove("is-closed4id");
+            } else {
+                this.innerHTML = "kokona";
+                $spoiler.classList.add("is-closed4id");
+            }
+        });
+
+    });
+
+}());
+</script>
+
+<br>
+i want today's q&a to be useful to some of you, although it is a personal reflection, i know it is also a subject not much thought and discussed, so i think it's good to share with you <img src="https://i.imgur.com/ac6UGRe.gif"/><br>
+<br><br>
+<center><img src="https://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="https://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+i think it's really important to write about it because it's something that has disturbed me all my life and i've always kept quiet about it because no one would take it seriously anyway.<br>
+people live by money, they act as if money is everything in life. even if they pretend they don't, they always think of money in the first place ( of course, until they have real problems in their lives and money doesn't help ).<br>
+ever since i was little i have always been bothered by the importance that all adults gives to money, but they have always told me " you will understand when you grow up ". well, i grew up, and reflecting a lot on what i want to do with my life, i definitely know that i do not want to live looking for money until my death.<br>
+how important is money to our lives ? to begin with, we are living beings, so we must survive in the first place. to survive, we need food, water, shelter, medicine, cleaning products, clothes... nowadays it is also quite necessary to have electricity.<br>
+secondly, we need to be happy, of course, because we have feelings and we think a lot about things, so we need to feel satisfied ! i believe that to be happy is a very personal thing, but in general we need to have peace in our hearts. this is not bought for money, of course. we need to feel comfortable and complete, the pursuit of this is different for each person. in general, we want the presence of people we love in our lives, and this may need money, but not so much, usually the longing is caused more by the lack of time or health of people. some people seek happiness through material goods, which may indeed be quite amusing, but should never be treated as essential because it is not. never. it's the silly, futile thing to expect to be happy, to be sad for the lack of material goods is totally meaningless if you think about it.<br>
+sure, then to be happy it's not necessary to have much money but rather own knowledge and inner peace ; but we need money to survive. of course you can't just run away from money if you were born into society. if you live in a big city, you need to pay bills to have water, shelter and electricity, you need to go to the market to buy food and cleaning products, you have to spend money on medicines and hospitals, you have to buy clothes ! well, it is possible to avoid much of this if you live in the countryside and can have water and food and even produce electricity, because we are intelligent human beings and we have nature in our favor, with effort we can enjoy it a lot. but you will still need money for other things.<br>
+i know what i'm writing are obvious things, but people don't usually think about them, which makes them very confused about life and how money should be used and what it really is for. it exists to be exchanged for important things that we can not produce alone, that we need the help of other people. we can't do everything on our own, and so humans live collectively, to help each other and to fulfill our needs, so we can survive much longer and have time to be happy. or so it should be, of course. things go wrong when people forget what is important to them and what they want and like to do. people can not be happy because they think only of money and what they have been taught to do.<br>
+to make money we need to help other people by doing something they want to pay for. there are many options for this, some are more stable and some less stable. there are many reasons for this, i do not know much about economics, politics or anything like that, but in my view one of the reasons is because some forms of work are extremely indirect, you are not helping anyone really, maybe even being a nuisance. this makes your job a bit pointless, so it's easily disposable and replaceable. people think of this part ( the job ) as super important to their lives and ironically treat it in the worst possible way : they think about what can make more money, neither what makes them happy nor other people happy. money should never be the focus of your life, since this job will be something that will occupy a good part of your life and should be something that helps other people, it should be something pleasurable, rewarding. you can choose from endless options of jobs, why choose to be a slave to money or have a purposeless and unstable work ? i just can't understand.<br>
+obviously many things that we enjoy so so so much are things that are not so useful to others and do not give much money, so we call them hobbies. i would not recommend trying to make a hobbie-type your source of money to survive, as that would give you extreme instability in life and make you very frustrated not to have the work valued. some people can actually make it work, but to have the time and dedication to make it happen it is necessary to survive in that period. if you are supported by someone, you can do this, but it is indeed complicated. BUT it doesn't mean that you should stop with your hobbies or treat them as something small in any way, they are still important, just not your main job.<br>
+thinking about all these things made me define what i want to do with my life ( the answer was the simplest, since these are things i always wanted to do, i just needed to figure out if this would work, of course ) : i definitely do not want to be a slave to money, i will never think of money as something to give life and happiness. i just want to do things that i like and i'm proud to do. that doesn't mean it will be easy, i'm going to have a lot of work and i'm going to try hard to make it work, but with a bright smile on my face !<br>
+i want to live a little away from the city, because i want to plant and raise animals. i have several plans on this and i know it's rather complex, but i've been planning a lot for several years, since it's something i've always wanted to do since i was little. i can tell you the details about some things if you want, of course, only practice can teach me what this kind of life can offer me, but it's really what i want. and i never thought it was something that could give me money since i always grew up having my dreams devalued and being encouraged to work on boring things to have money. i'm glad i never took it seriously and i always followed my heart.<br>
+i already told you that i want to have a cafe, right ? so, this is part of the whole thing, since it also involves food. i believe that selling food in general is quite stable and will be extremely enjoyable to me. the part where the cafe is also a store, is the part where my hobbies are included, since i do not want to abandon them !<br>
+money, being something quite vague and used only to buy important things that help us survive and possibly have extra entertainment, is something that at the moment i am exclusively using with the intention of realizing my dreams and having a source of happy income and stability. in the future, i know that i will have money to also buy beautiful things and travel, but that will only be because i worked hard and made the right choices : i chose to follow my heart, to help people and to be happy.<br>
+do not choose to live for the money, do not be sad because of money, never !!!<br>
+<br><br>
+i hope this helps you to reflect on your life choices and think about whether you are really choosing happiness.<br>
+i know a lot of young people read my blog, so i really wish you were not influenced by the sad, greedy adults around you ; ;<br>
+um and i'm sorry if i wrote too much unnecessarily ////<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/jFyNyak.gif"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1506&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;0&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/4Id7F0K.png"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/oqD0APf.gif"/><img src="https://i.imgur.com/oqD0APf.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
