--- a/fairy-loli.html
+++ b/fairy-loli.html
@@ -471,6 +471,59 @@ let's get to know a little bit of this magical world !
 <center>
 <style type="text/css">
 /*estilo da pop-up*/
+#pop03{
+position: fixed;
+top: 15%;
+left: 40%;
+font: 11px;
+margin: -75px 0 0 -150px;
+width: 410px; /*largura do coiso todo*/
+height: 620px; /*altuuuuuuura*/
+padding: 5px;
+border:1px dashed #CEB6B6;
+background: #fffcfc; /*corzinha de fundo*/
+display: none;
+z-index: 999999999999999999999; /*0 "10" faz o banner se sobre-por aos demais*/
+}
+#link-fechar03{
+color: #CEB6B6;
+}
+</style>
+
+<script type="text/javascript">
+function fecharpop03(){
+    document.getElementById('pop03').style.display = 'none';
+}
+function abrirpop03(){
+    document.getElementById('pop03').style.display = 'block';
+    setTimeout ("fecharpop03()", 999999);
+}
+</script>
+
+<div id="pop03">
+<!--coisinhas-->
+<center><div style="background-image:url(); border: 1px; overflow: auto; color: #BC9F9F; width: 410px;height: 620px; overflow-x: hidden; text-align:justify ; font-family: Verdana; font-size:10px; line-height: 10px">
+
+<div style= "padding-left: 3px;">
+　　　　　　<div style="text-align: right;"><a href="javascript: fecharpop03();" ><font color="#CEB6B6" size="1"> [ x ]</font></a>　</div>
+
+<br>
+<center><img src="https://i.imgur.com/7Dv7HG3.png" width="400" height="auto"></center>
+
+<br>
+<center><font color="#B49797">lilla</font></center>
+</div>
+</div>
+</div>
+</center>
+<!--coisinhas-->
+</center>
+
+　　　　　　　　　　　　　　<a href="javascript: abrirpop03();"><img src="https://i.imgur.com/FUakXVf.png"></a>
+<br><br>
+<center>
+<style type="text/css">
+/*estilo da pop-up*/
 #pop02{
 position: fixed;
 top: 15%;
