--- a/tiny-journal.html
+++ b/tiny-journal.html
@@ -402,6 +402,49 @@ p { margin: 0; }
 <br><br>
 </center>
 
+
+<div style="text-align:left">
+<center><font color="#b7aba8">
+<img src="https://i.imgur.com/9v2tHpo.gif"><br><br>
+september . 13 . 2018<br>
+☆ i want to be comfortable ☆
+</font>
+</center>
+<font color="#ccbdb9">
+<br><br>
+
+　　the only thing i really want is to feel comfortable constantly. i don't want to feel that i have to justify everything i do or cry for the mistakes of others. i don't want to feel like a bad girl when i don't reach unattainable expectations.<br>
+　　i want to feel comfortable being alive and in my body. i want to feel that everything is fine and that i'm safe all the time. i want to know that i'm perfect with my imperfections. i want to live fully and without regrets.<br>
+　　i want to realize that nothing can hurt me more than myself.<br>
+<br><br>
+</font>
+
+<div style="float: right; ">
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_t2941852109033_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t29418521090233_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1AnEqHtXFVTe_cs4J_2Mtm7fE4tnXfAZA"></script>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_t2941852109233_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t29418521092333_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=11EqopSwTBxplE8V6DAGMxLOIkUaOB6lz"></script>
+</font></font>
+</div>
+</div>
+</div>
+</body>
+</div>
+
+
+
+
+
+<br><br><br><br><br><br><br><br>
 <div style="text-align:left">
 <center><font color="#B5A3A3">
 <img src="https://i.imgur.com/QLXV4LE.gif"><br><br>
@@ -581,64 +624,6 @@ yay { cursor: pointer; }
 </div>
 
 
-
-
-
-<br><br><br><br><br><br><br><br>
-<center><font color="#B5A3A3">
-<img src="https://i.imgur.com/QLXV4LE.gif"><br><br>
-september . 20 . 2017<br>
-☆ melting ☆
-</font>
-</center>
-<font color="#C2B1B1">
-<br><br>
-
-　　i shouldn't ,<br>
-　　they say .<br>
-　　poof　　　　i jump<br>
-　　　　　　　　　in soft clouds<br>
-　　when i'm hungry ,<br>
-　　i can eat as many cookies as i want<br>
-　　　　　　　　　　　　　　dipped in honey ,<br>
-　　　　　　　　　　　　　　　　with milk and vanilla<br>
-　　but that's not just what i want ,<br>
-　　to be complete ,<br>
-　　　　　　i need more :<br>
-　　　　　　　　　　　i want to melt !<br>
-　　　　　　　　　　　i want to feel my heart warm<br>
-　　　　　　　　　　　i want to feel tenderness<br>
-　　　　　　　　　　　i need to melt ,<br>
-　　　　　　　　　　　　　　　　definitely .<br>
-<br>
-　　so here i come -<br>
-　　　　　　poof i leap -<br>
-　　　　　　　　　　　in the not so soft grass ,<br>
-　　　　　　　　　　　but i'm satisfied ,<br>
-　　　　　　　　　　　　　　since now i can melt !
-<br><br>
-</font>
-
-<div style="float: right; ">
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109033_"><img width="15px" height="15px" src="https://i.imgur.com/qpOSnZ5.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_t29418521090233_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1AnEqHtXFVTe_cs4J_2Mtm7fE4tnXfAZA"></script>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_t2941852109233_"><img width="15px" height="15px" src="https://i.imgur.com/UhJgJcU.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_t29418521092333_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=11EqopSwTBxplE8V6DAGMxLOIkUaOB6lz"></script>
-</font></font>
-</div>
-</div>
-</div>
-</body>
-</div>
 
 
 
