--- a/status.html
+++ b/status.html
@@ -347,9 +347,7 @@ position: relative;
 <center><img src="https://i.imgur.com/Bm18E8o.gif"></center><br>
 <center><font color="#B49797">{ status }</font></center>
 <br>
-<center><font color="#A07777">feeling: </font><font color="#E67474">totally in love </font><img src="https://i.imgur.com/8ow5cKb.gif"></center>
-
-<br><br>
+<center><font color="#A07777">feeling: </font><font color="#E67474">totally in love </font><img src="https://i.imgur.com/8ow5cKb.gif"></center><br><br>
 <center><img src="https://i.imgur.com/kN7ZWlR.png"><center><br><br><br><style>
 p { margin: 0; }
 .spoiler-area {
@@ -397,6 +395,26 @@ p { margin: 0; }
 
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
+<div style="text-align: left;"><br><br>
+　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">09.20.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109010_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090210_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=19nECcIv4zJ5K63g3dyV4qY4un0y_T75m"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109210_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092310_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1N27a3YJkOzMXOFONYpp885Do7VlDIHs3"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">felting is so relaxing ~</font>
+<br><br>
 <div style="text-align: left;"><br><br>
 　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">09.08.18</font>
 <body>
@@ -576,26 +594,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">i really must stop blaming myself for everything ; ;</font>
-<br><br>
-<div style="text-align: left;"><br><br>
-　<img src="https://i.imgur.com/lOSrsvD.gif"> <font color="#624646">06.07.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109010_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090210_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=19nECcIv4zJ5K63g3dyV4qY4un0y_T75m"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109210_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092310_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1N27a3YJkOzMXOFONYpp885Do7VlDIHs3"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">i'm really into dress up games again ♡</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
